# llm-cost-ops

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AUDIT_FILES_SUMMARY.txt  BENCHMARK-ARCHITECTURE.md  BENCHMARK_DATA_FLOW.md  BENCHMARK_IMPLEMENTATION_SUMMARY.md  BENCHMARK_INTERFACE_ARCHITECTURE.md  BENCHMARK_QUICK_REFERENCE.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Cargo.toml.old  Dockerfile  Dockerfile.dev  README.md  RUN-COMMAND-IMPLEMENTATION-SUMMARY.md  VERIFICATION-CHECKLIST.md  benchmarks-example-output.txt  compatibility-matrix.md  config.toml.template  netlify.toml  package-lock.json  package.json  vercel.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  cliff.toml  dependabot.yml  dependency-review-config.yml  labeler.yml
.sqlx/: query-1f0d4b066954b4d19a153a43440d7abc01c57da067a3dc7e2f7bfb703bd587bb.json  query-5fa73a85e2a46b3d8a1c1a402cf8b3781aeea926006c88fc562c5e426c10c0d3.json  query-6c46193f243014f8e965ce11abd5eed0547be72af28648294738913e7e483ec4.json  query-a113118fc0f9b11cb747ad8c2cb2509affbb9ffbc6b5aefca3e1da4692f31262.json  query-a5e4d42ce8aba363cb0ba1f3494cddbcda726b41242c6132a724f3d87c1a225f.json
benches/: cost_calculation.rs  engine_benchmarks.rs
benchmarks/: README.md
crates/llm-cost-ops/: BENCHMARK_USAGE.md  Cargo.toml
crates/llm-cost-ops-api/: Cargo.toml  README.md
crates/llm-cost-ops-api/src/: lib.rs
crates/llm-cost-ops-api/src/api/: error.rs  handlers.rs  pagination.rs  routes.rs  types.rs  validation.rs
crates/llm-cost-ops-api/src/ingestion/: handler.rs  mod.rs  models.rs  ratelimit.rs  stream.rs  traits.rs  webhook.rs
crates/llm-cost-ops-cli/: BENCHMARKS.md  Cargo.toml  README.md
crates/llm-cost-ops-cli/src/: benchmarks.rs  lib.rs
crates/llm-cost-ops-cli/src/cli/: mod.rs
crates/llm-cost-ops-compliance/: Cargo.toml  README.md
crates/llm-cost-ops-compliance/src/: lib.rs
crates/llm-cost-ops-compliance/src/auth/: api_key.rs  mod.rs  rbac.rs
crates/llm-cost-ops-compliance/src/compliance/: mod.rs  scheduler.rs
crates/llm-cost-ops-compliance/src/compliance/gdpr/: mod.rs  repository.rs  routes.rs
crates/llm-cost-ops-compliance/src/dlq/: mod.rs  storage.rs
crates/llm-cost-ops-sdk/: Cargo.toml  README.md
crates/llm-cost-ops-sdk/src/: lib.rs
crates/llm-cost-ops/.sqlx/: query-a17d975ebc487c76c521784749c63610d5fd24a6b9f38fa4198de0364508c155.json  query-b52595d8ed82a9fa4cda1912281ce9d702484c3a402ca52c1a9b7b1819f47c3c.json  query-d6d0ee41e8c48f7d83da6692517f5e8f8e4dd522896bd3f8db014e7c02693530.json  query-f7f6763fdfc8518675cd193b9fdf23b7d33e0c8ca12d637a7b064714b0b58c74.json
crates/llm-cost-ops/benchmarks/output/: .gitkeep
crates/llm-cost-ops/benchmarks/output/raw/: .gitkeep
crates/llm-cost-ops/migrations/: 20250115000001_initial_schema.sql  20250116000002_compliance_schema.sql
crates/llm-cost-ops/src/: lib.rs
crates/llm-cost-ops/src/adapters/: compression_adapters.rs  engine_adapters.rs  forecasting_adapters.rs  mod.rs
crates/llm-cost-ops/src/agents/: budget_enforcement.rs  contracts.rs  mod.rs  registry.rs  ruvector.rs
crates/llm-cost-ops/src/benchmarks/: io.rs  markdown.rs  mod.rs  result.rs
crates/llm-cost-ops/src/compression/: codec.rs  middleware.rs  mod.rs
crates/llm-cost-ops/src/engine/: mod.rs  normalizer.rs
crates/llm-cost-ops/src/export/: config.rs  delivery.rs
crates/llm-cost-ops/src/export/templates/: email_default.hbs
crates/llm-cost-ops/src/forecasting/: metrics.rs  mod.rs
crates/llm-cost-ops/src/integrations/: analytics_hub.rs  connector_hub.rs  mod.rs  observatory.rs
crates/llm-cost-ops/src/metrics/: collectors.rs  mod.rs
crates/llm-cost-ops/src/observability/: config.rs  logging.rs  mod.rs
crates/llm-cost-ops/src/storage/: mod.rs
crates/llm-cost-ops/tests/: budget_enforcement_agent_test.rs
deployment/: Dockerfile  Dockerfile.dev  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
docker/: README.md  healthcheck.sh
docs/: ACTION_ITEMS.md  AUDIT_IMPLEMENTATION_REPORT.md  AUDIT_SYSTEM.md  BENCHMARK_ARCHITECTURE_SUMMARY.md  CI-CD-QUICKSTART.md  CODE_OF_CONDUCT.md  COMPLIANCE_API_SPECIFICATION.md  COMPLIANCE_ARCHITECTURE.md  COMPLIANCE_ARCHITECTURE_SUMMARY.md  CONTRIBUTOR_ONBOARDING.md  DEPLOYMENT.md  DEVOPS_AUTOMATION_REPORT.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_QUICKSTART.md  DOCS_DEPLOYMENT_REPORT.md  GDPR_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_CHANGES.md  IMPLEMENTATION_REPORT.md  INGESTION_TESTS_ADDED.md  INGESTION_TEST_SUMMARY.md  MARKET_READINESS_ASSESSMENT.md  MULTI_TENANCY_QA_REPORT.md  MULTI_TENANCY_TEST_PLAN.md  MULTI_TENANCY_TEST_SUMMARY.md  OBSERVATORY_INTEGRATION.md  PYTHON_SDK_CICD_SUMMARY.md  QA_COMPREHENSIVE_REPORT.md  QA_EXECUTIVE_SUMMARY.md  QA_INDEX.md  QUICK_START.md  README-crates.md  REPOSITORY_GOVERNANCE_REPORT.md  SDK_DOCUMENTATION_REPORT.md  SDK_DOCUMENTATION_SPECIALIST_REPORT.md  SECURITY.md  SPARC-COMPLETION.md  SPARC_PHASE_2_PSEUDOCODE.md  SPECIFICATION.md  SSO_ENTERPRISE_RESEARCH.md  SSO_IMPLEMENTATION_SUMMARY.md  (+7 more)
examples/: 01-getting-started.md  01-sdk-basic-usage.rs  02-ingestion-server.rs  03-nats-consumer.rs  04-sdk-advanced-usage.rs  audit_example.rs  usage.json
k8s/: DEPLOYMENT.md  KUBERNETES_DEPLOYMENT_GUIDE.md  MANIFEST_SUMMARY.md  QUICK_REFERENCE.md  README.md  validate.sh
migrations/: 20250116000001_gdpr_compliance.sql
migrations_postgres/: 20250115000001_initial_schema.sql  20250116000002_compliance_schema.sql
plans/: .deployment-checklist.md  03-ARCHITECTURE.md  (+3 more)
python-sdk/: .coverage  IMPLEMENTATION_SUMMARY.md  README.md  coverage.xml  pyproject.toml
python-sdk/examples/: async_usage.py  basic_usage.py  error_handling.py
python-sdk/llm_cost_ops/: __init__.py  client.py  config.py  exceptions.py  types.py
python-sdk/llm_cost_ops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python-sdk/llm_cost_ops/_internal/: __init__.py  http_client.py
python-sdk/llm_cost_ops/resources/: __init__.py  analytics.py  costs.py  pricing.py  usage.py
python-sdk/tests/: __init__.py  conftest.py  test_client.py  test_config.py
(+557 files in other folders)
