[package]
name = "llm-cost-ops-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "REST API and data ingestion for LLM Cost Ops"
readme = "README.md"
documentation = "https://docs.rs/llm-cost-ops-api"
keywords = ["llm", "cost", "api", "rest", "ingestion"]
categories = ["web-programming", "development-tools"]

[dependencies]
# Internal dependencies
llm-cost-ops = { version = "0.1.1", path = "../llm-cost-ops" }
llm-cost-ops-compliance = { version = "0.1.0", path = "../llm-cost-ops-compliance" }

# Async Runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP Server & Client
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
hyper.workspace = true

# Database
sqlx.workspace = true

# Time & Date
chrono.workspace = true

# Error Handling
anyhow.workspace = true
thiserror.workspace = true

# Logging & Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
uuid.workspace = true
url.workspace = true

# Validation
validator.workspace = true

# Event Streaming
async-nats.workspace = true
redis.workspace = true

# Retry & Resilience
backoff.workspace = true
deadpool.workspace = true

# Decimal precision for currency
rust_decimal.workspace = true

[lib]
name = "llm_cost_ops_api"
path = "src/lib.rs"
