[package]
name = "llm-cost-ops-compliance"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Compliance, authentication, and audit logging for LLM Cost Ops"
readme = "README.md"
documentation = "https://docs.rs/llm-cost-ops-compliance"
keywords = ["llm", "compliance", "gdpr", "audit", "rbac"]
categories = ["authentication", "development-tools"]

[dependencies]
# Internal dependencies
llm-cost-ops = { version = "0.1.1", path = "../llm-cost-ops" }

# Async Runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# Time & Date
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true

# Error Handling
anyhow.workspace = true
thiserror.workspace = true

# Logging & Tracing
tracing.workspace = true

# Utilities
uuid.workspace = true
regex.workspace = true

# HTTP Server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Authentication & Security
jsonwebtoken.workspace = true
sha2.workspace = true
base64.workspace = true
constant_time_eq.workspace = true
rand.workspace = true

# Validation
validator.workspace = true

# Retry & Resilience
backoff.workspace = true

# Export & Reporting
csv.workspace = true

[lib]
name = "llm_cost_ops_compliance"
path = "src/lib.rs"
