[package]
name = "llm-cost-ops-sdk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Client SDK for LLM Cost Ops"
readme = "README.md"
documentation = "https://docs.rs/llm-cost-ops-sdk"
keywords = ["llm", "cost", "sdk", "client"]
categories = ["api-bindings", "development-tools"]

[dependencies]
# Internal dependencies
llm-cost-ops = { version = "0.1.1", path = "../llm-cost-ops" }

# Async Runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP Client
reqwest.workspace = true

# Time & Date
chrono.workspace = true

# Error Handling
anyhow.workspace = true
thiserror.workspace = true

# Logging & Tracing
tracing.workspace = true

# Utilities
uuid.workspace = true
url.workspace = true

# Retry & Resilience
backoff.workspace = true

# Utilities (random for jitter)
rand.workspace = true

# Decimal precision for currency
rust_decimal.workspace = true

[lib]
name = "llm_cost_ops_sdk"
path = "src/lib.rs"
